--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ body {
   margin: 0;
   color: #2C2C2C;
   border-top: 10px solid #0066FF;
-  /*border-bottom: 12px solid #ddd;*/
 }
 
 #content {
@@ -11,7 +10,7 @@ body {
 }
 
 #canvas { 
-  border: 1px solid #ddd; 
+  /*border: 1px solid #eee; */
 }
 
 h1 {
@@ -22,7 +21,7 @@ h1 {
   background: #0066FF;
   color: white;
   display: inline-block;
-  padding: 30px 30px;
+  padding: 30px 20px;
   font-size: 2em;
   opacity: 0;
   -webkit-border-radius: 100px;
@@ -49,7 +48,6 @@ h1 a:hover {
 }
 
 h2 {
-  margin-top: 80px;
   font-weight: 100;
   letter-spacing: 1px;
   border-bottom: 1px solid #eee;
@@ -93,35 +91,6 @@ a:hover {
   color: #003300;
 }
 
-ul {
-  margin-top: 20px;
-  padding: 0 15px;
-  width: 100%;
-}
-
-ul li {
-  float: left;
-  width: 40%;
-  margin-top: 5px;
-  margin-right: 60px;
-  list-style: none;
-  border-bottom: 1px solid #eee;
-  padding: 5px 0;
-  font-size: 12px;
-}
-
-ul::after {
-  content: '.';
-  height: 0;
-  display: block;
-  visibility: hidden;
-  clear: both;
-}
-
-code {
-  font: 12px monaco, monospace;
-}
-
 pre {
   margin: 30px;
   padding: 30px;
@@ -134,29 +103,32 @@ pre {
   overflow-x: auto;
 }
 
-img {
-  margin: 30px;
-  padding: 1px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -webkit-box-shadow: 0 3px 10px #dedede, 0 1px 5px #888;
-  -moz-box-shadow: 0 3px 10px #dedede, 0 1px 5px #888;
-  max-width: 100%;
-}
-
 footer {
-  background: #eee;
   width: 100%;
-  padding: 30px 0;
-  text-align: right;
-  border-top: 2px solid #ddd;
+  text-align: center;
 }
 
-footer span {
-  display: block;
-  margin-right: 30px;
-  color: #888;
-  font-size: 14px;
+a.linkopacity img {
+  filter:alpha(opacity=50);
+  -moz-opacity: 0.4;
+   opacity: 0.5;
+  -khtml-opacity: 0.4;
+}
+a.linkopacity:hover img {
+  filter:alpha(opacity=100);   
+  -moz-opacity: 1.0;   
+  opacity: 1.0;
+  -khtml-opacity: 1.0; 
+}
+
+.shadow {
+  text-shadow:  1px 0px 1px #ccc, 0px 1px 1px #eee,
+                2px 1px 1px #ccc, 1px 2px 1px #eee,
+                3px 2px 1px #ccc, 2px 3px 1px #eee,
+                4px 3px 1px #ccc, 3px 4px 1px #eee,
+                5px 4px 1px #ccc, 4px 5px 1px #eee,
+                6px 5px 1px #ccc, 5px 6px 1px #eee,
+                7px 6px 1px #ccc;
 }
 
 @media all and (max-width: 850px) {
@@ -176,9 +148,3 @@ footer span {
     margin-left: 0;
   }
 }
-
-code .comment { color: #ddd }
-code .init { color: #2F6FAD }
-code .string { color: #5890AD }
-code .keyword { color: #0066FF }
-code .number { color: #2F6FAD }
