--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 #canvas { 
-  border: 1px solid #eee; 
+/*  border: 1px solid #eee;  */
 }
 
 h1 {
@@ -31,6 +31,13 @@ h1 {
 h1:hover {
   background: white;
   color: #0066FF;
+  text-shadow:  1px 0px 1px #ccc, 0px 1px 1px #eee,
+                2px 1px 1px #ccc, 1px 2px 1px #eee,
+                3px 2px 1px #ccc, 2px 3px 1px #eee,
+                4px 3px 1px #ccc, 3px 4px 1px #eee,
+                5px 4px 1px #ccc, 4px 5px 1px #eee,
+                6px 5px 1px #ccc, 5px 6px 1px #eee,
+                7px 6px 1px #ccc;
 }
 h1 a {
   color: inherit;
@@ -39,13 +46,18 @@ h1 a {
 h1 a:hover {
   color: inherit;
   text-decoration: none;
-  font-weight: bold;
 }
 
 h2 {
   font-weight: 100;
   letter-spacing: 1px;
   border-bottom: 1px solid #eee;
+}
+
+#header {
+  position:absolute;
+  right:0px;
+  width:300px;
 }
 
 #tag {
@@ -92,11 +104,6 @@ pre {
   -webkit-box-shadow: inset 0 0 10px #eee;
   -moz-box-shadow: inset 0 0 10px #eee;
   overflow-x: auto;
-}
-
-footer {
-  width: 100%;
-  text-align: center;
 }
 
 a.linkopacity img {
