--- a/css/style.css
+++ b/css/style.css
@@ -5,66 +5,19 @@ body {
   border-top: 10px solid #0066FF;
 }
 
-#content {
-  padding: 10px 210px 10px 210px;
-}
-
-#canvas { 
-/*  border: 1px solid #eee;  */
-}
-
-h1 {
+div.container {
+  top: 5rem;
+  height: 30em;
   position: relative;
-  font-style: normal;
-  font-weight: 100;
-  text-transform: lowercase;
-  background: #0066FF;
-  color: white;
-  display: inline-block;
-  padding: 30px 10px;
-  font-size: 2em;
-  -webkit-border-radius: 100px;
-  -moz-border-radius: 100px;
-  -webkit-transition: opacity 1s, background-color 200ms;
-  -moz-transition: opacity 1s, background-color 200ms;
-}
-h1:hover {
-  background: #66CCFF;
-  color: white;
-}
-h1 a {
-  color: inherit;
-  font-weight: inherit;
-}
-h1 a:hover {
-  color: inherit;
-  text-decoration: none;
 }
 
-h2 {
-  font-size: 1.5em;
-  font-weight: 100;
-  letter-spacing: 1px;
-  border-bottom: 1px solid #eee;
-}
-
-#header {
-  position:absolute;
-  right:0px;
-  width:300px;
-}
-
-#tag {
-  opacity: 1;
-  color: #0066FF;
-  font-weight: 100;
-  font-size: 24px;
-  margin-top: -110px;
-  margin-left: 150px;
-  margin-bottom: 100px;
-  letter-spacing: 2px;
-  -webkit-transition: opacity 1s, margin-top 200ms, margin-bottom 200ms, margin-left 1s;
-  -moz-transition: opacity 1s, margin-top 200ms, margin-bottom 200ms, margin-left 1s;
+div.container div.content {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 
 a {
@@ -76,22 +29,10 @@ a:hover {
   color: #003300;
 }
 
-pre {
-  margin: 30px;
-  padding: 30px;
-  border: 1px solid #eee;
-  border-bottom-color: #ddd;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -webkit-box-shadow: inset 0 0 10px #eee;
-  -moz-box-shadow: inset 0 0 10px #eee;
-  overflow-x: auto;
-}
-
 a.linkopacity img {
   filter:alpha(opacity=50);
+  opacity: 0.5;
   -moz-opacity: 0.4;
-   opacity: 0.5;
   -khtml-opacity: 0.4;
 }
 a.linkopacity:hover img {
@@ -101,13 +42,15 @@ a.linkopacity:hover img {
   -khtml-opacity: 1.0; 
 }
 
-.shadow {
-  text-shadow:  1px 0px 1px #ccc, 0px 1px 1px #eee,
-                2px 1px 1px #ccc, 1px 2px 1px #eee,
-                3px 2px 1px #ccc, 2px 3px 1px #eee,
-                4px 3px 1px #ccc, 3px 4px 1px #eee,
-                5px 4px 1px #ccc, 4px 5px 1px #eee,
-                6px 5px 1px #ccc, 5px 6px 1px #eee,
-                7px 6px 1px #ccc;
+h2 {
+  font-size: 1.5em;
+  font-weight: 100;
+  letter-spacing: 1px;
+  border-bottom: 1px solid #eee;
+}  
+
+.header {
+  font-family: Monospace;
+  font-size: 24px;
+  line-height: 110%;
 }
-  
