--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   font: 14px/1.6 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   color: #2C2C2C;
-  border-top: 10px solid #0066FF;
+  border-top: 15px solid rgb(213, 214, 216);
 }
 
 div.container {
@@ -21,25 +21,13 @@ div.container div.content {
 }
 
 a {
-  color: #000099;
-  font-weight: bold;
+  color: #17176d;
+  /* font-weight: bold; */
   text-decoration: none;
 }
 a:hover {
-  color: #003300;
-}
-
-a.linkopacity img {
-  filter:alpha(opacity=50);
-  opacity: 0.5;
-  -moz-opacity: 0.4;
-  -khtml-opacity: 0.4;
-}
-a.linkopacity:hover img {
-  filter:alpha(opacity=100);   
-  -moz-opacity: 1.0;   
-  opacity: 1.0;
-  -khtml-opacity: 1.0; 
+  color: #73717a;
+  text-decoration: underline;
 }
 
 h2 {
@@ -51,6 +39,6 @@ h2 {
 
 .header {
   font-family: Monospace;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 110%;
 }
