--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,16 @@ div.container div.content {
 }
 
 a {
-  color: #17176d;
-  text-decoration: none;
+  color: #2C2C2C;
+  background-image: linear-gradient(120deg, #dfe2f3 0%, #f8fafa 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.1em;
+  background-position: 0 88%;
+  transition: background-size 0.25s ease-in;
 }
 a:hover {
-  color: #73717a;
-  text-decoration: underline;
+  background-size: 100% 88%;
+  cursor: pointer;
 }
 
 h2 {
