--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
+html {
+  height: 100%;
+  margin: 0 auto;
+  max-width: 26em;
+}
+
 body {
-  font: 14px/1.6 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 18px/1.8 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   color: #2C2C2C;
   border-top: 15px solid rgb(213, 214, 216);
@@ -42,6 +48,6 @@ h2 {
 
 .header {
   font-family: Monospace;
-  font-size: 20px;
+  font-size: 24px;
   line-height: 110%;
 }
