--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 html {
   height: 100%;
   margin: 0 auto;
-  max-width: 26em;
+  max-width: 38em;
 }
 
 body {
-  font: 18px/1.8 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 1.4rem/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   color: #2C2C2C;
   border-top: 15px solid rgb(213, 214, 216);
@@ -13,7 +13,7 @@ body {
 
 div.container {
   top: 5rem;
-  height: 30em;
+  height: 30rem;
   position: relative;
 }
 
@@ -40,7 +40,7 @@ a:hover {
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   font-weight: 100;
   letter-spacing: 1px;
   border-bottom: 1px solid #eee;
@@ -48,6 +48,24 @@ h2 {
 
 .header {
   font-family: Monospace;
-  font-size: 24px;
+  font-size: 1.7rem;
   line-height: 110%;
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    body {
+      font: 2.2rem/1.7 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+    .header {
+      font-size: 2.7rem;
+    }
+    div.container {
+      top: 28rem;    
+    }
+    h2 {
+      font-size: 3rem;
+    }
 }
