--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 body {
   margin: 0 auto 0;
   min-height: 100%;
-  background-color: #222;
+  background-color: #0d0c0cc4;
   color: #fafafa;
   font-family: 'Courier New';
   max-width: 48rem;
@@ -33,11 +33,9 @@ article {
 }
 
 footer {
-  margin-top: 10vh;
-  height: 10vh;
+  height: 5vh;
   line-height: 0.5rem;
   font-size: 1rem;
-  background-image: linear-gradient(#222222, #2aff00);
 }
 
 a,
