--- a/style.css
+++ b/style.css
@@ -12,15 +12,14 @@ body {
   margin: 0 auto 0;
   color: #fafafa;
   background-color: #093640d6;
-  max-width: 48rem;
 }
 nav {
   margin-bottom: 4vh;
-  margin-top: 4vh;
   display: -webkit-box;
   -webkit-box-pack: center;
   justify-content: center;
-  height: 4vmin;
+  height: 6vmin;
+  width: 100%;
 }
 .head {
   -webkit-box-flex: 1;
@@ -31,23 +30,25 @@ nav {
 }
 
 article {
-  margin-bottom: 8vh;
+  margin-bottom: 6vh;
 }
 
 footer {
   display: -webkit-box;
   -webkit-box-pack: center;
   justify-content: center;
-  height: 4vmin;
-  flex-shrink: 0;
-  margin-top: 2vh;
+  height: 6vmin;
+  position: fixed;
+  bottom: 0;
+  left: 0; 
+  width: 100%;
 }
 .foot {
   -webkit-box-flex: 1;
   flex: 1 1 0;
   -webkit-transition: background-color 6500ms ease-out;
   transition: background-color 6500ms ease-out;
-  transition-delay: 1s;
+  transition-delay: 4s;
 }
 
 a,
