text color to #fff

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   line-height: 1.4rem;
   text-align: center;
   margin: 0 auto 0;
-  color: #fafafa;
+  color: #fff;
   background-color: #093640d6;
 }
 nav {
