--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ nav {
   justify-content: center;
   height: 4vmin;
   width: 100%;
-  margin-bottom: clamp(2rem, 4vh, 4rem);
+  margin-bottom: 12vmin;
 }
 .head {
   -webkit-box-flex: 1;
