--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 body {
-  font-size: clamp(0.35rem, 0.25rem + 6vw, 1.15rem);
+  font-size: clamp(0.35rem, 3vw, 1.15rem);
   font-family: system-ui;
   line-height: 1.55rem;
   text-align: center;
