--- a/style.css
+++ b/style.css
@@ -40,15 +40,40 @@ section {
 }
 
 a, a:visited {
+  text-decoration: none;
   color: whitesmoke;
-  -webkit-text-decoration: var(--light-background) solid underline;
-  text-decoration: var(--light-background) solid underline;
-  -webkit-text-decoration-skip: ink;
-  text-decoration-skip: ink;
 }
 
 a:hover, a:focus, a:active {
-  background-color: rgb(79, 141, 141);
+  background-color: rgb(59, 105, 105);
+}
+
+.btn {
+  color: whitesmoke;
+  cursor: pointer;
+  position: relative;
+  padding: 2px 2px;
+  transition: all 0.5s;
+}
+
+.btn:after, .btn:before {
+  content: " ";
+  width: 10px;
+  height: 5px;
+  position: absolute;
+  transition: all 0.5s;
+}
+
+.btn:before {
+  bottom: 1px;
+  right: -1px;
+  border-bottom: 2px solid #b2c6b2;
+  border-right: 2px solid #b2c6b2;
+}
+
+.btn:hover:before, .btn:hover:after {
+  width: 100%;
+  height: 100%;
 }
 
 ul {
@@ -58,12 +83,11 @@ ul {
   list-style-type: none;
   line-height: 20px;
   column-count: 2;
-  column-rule: dotted 1px rgb(175, 212, 183);
+  column-rule: inset 1px rgb(175, 212, 183);
 }
 
 li {
-  padding-left: 5px;
-  padding-right: 5px;
+  line-height: 22px;
   border-color: var(--light-background);
 }
 
@@ -73,7 +97,6 @@ footer {
   bottom: 0;
   left: 0;
   text-align: center;
-  border: 0;
 }
 
 .blink {
