font responsivness updated

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-  font-size: calc(1rem + 0.25vw);
+  /* font-size: calc(1rem + 0.25vw); */
   --main-background: #092940d6;
   --light-background: #4e5587;
 }
@@ -19,6 +19,41 @@ body {
   font-family: system-ui;
 }
 
+h1,
+.fs-h1 {
+  font-size: clamp(3rem, 2.7273rem + 1.0909vw, 3.6rem);
+}
+
+h2,
+.fs-h2 {
+  font-size: clamp(2.25rem, 2.0455rem + 0.8182vw, 2.7rem);
+}
+
+h3,
+.fs-h3 {
+  font-size: clamp(1.875rem, 1.7045rem + 0.6818vw, 2.25rem);
+}
+
+h4,
+.fs-h4 {
+  font-size: clamp(1.5rem, 1.3636rem + 0.5455vw, 1.8rem);
+}
+
+h5,
+.fs-h5 {
+  font-size: clamp(1.25rem, 1.1364rem + 0.4545vw, 1.5rem);
+}
+
+h6,
+.fs-h6 {
+  font-size: clamp(1.125rem, 1.0227rem + 0.4091vw, 1.35rem);
+}
+
+p,
+.fs-p {
+  font-size: clamp(0.8333rem, 0.7576rem + 0.303vw, 1rem);
+}
+
 nav {
   display: -webkit-box;
   -webkit-box-pack: center;
@@ -35,8 +70,8 @@ nav {
 }
 
 section {
-  margin-top: 6vh;
-  margin-bottom: 2vh;
+  /* margin-top: 6vh;
+  margin-bottom: 2vh; */
 }
 
 a,
